
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_3__ ;
typedef struct TYPE_8__ TYPE_2__ ;
typedef struct TYPE_7__ TYPE_1__ ;


struct TYPE_7__ {int gtop; TYPE_3__* gstate; } ;
typedef TYPE_1__ pdf_run_processor ;
struct TYPE_8__ {int* v; int colorspace; int kind; } ;
typedef TYPE_2__ pdf_material ;
struct TYPE_9__ {TYPE_2__ stroke; TYPE_2__ fill; } ;
typedef TYPE_3__ pdf_gstate ;
typedef int fz_context ;
typedef int fz_colorspace ;


 int PDF_FILL ;
 int PDF_MAT_COLOR ;
 int fz_colorspace_n (int *,int *) ;
 int fz_drop_colorspace (int *,int ) ;
 int fz_keep_colorspace (int *,int *) ;
 TYPE_3__* pdf_flush_text (int *,TYPE_1__*) ;
 scalar_t__ pdf_is_tint_colorspace (int *,int *) ;

__attribute__((used)) static void
pdf_set_colorspace(fz_context *ctx, pdf_run_processor *pr, int what, fz_colorspace *colorspace)
{
 pdf_gstate *gstate = pr->gstate + pr->gtop;
 pdf_material *mat;
 int n = fz_colorspace_n(ctx, colorspace);

 gstate = pdf_flush_text(ctx, pr);

 mat = what == PDF_FILL ? &gstate->fill : &gstate->stroke;

 fz_drop_colorspace(ctx, mat->colorspace);

 mat->kind = PDF_MAT_COLOR;
 mat->colorspace = fz_keep_colorspace(ctx, colorspace);

 mat->v[0] = 0;
 mat->v[1] = 0;
 mat->v[2] = 0;
 mat->v[3] = 1;

 if (pdf_is_tint_colorspace(ctx, colorspace))
 {
  int i;
  for (i = 0; i < n; i++)
   mat->v[i] = 1.0f;
 }
}
